--- a/home.css
+++ b/home.css
@@ -3,11 +3,11 @@
 .listItem {
 	display: flex; 
 	flex-direction: column; 
-	background-color: green;
 }
 
 .ideaImg {
-
+	width: 35px; 
+	height: 35px; 
 }
 
 .ideaRow {
